@@ -1,3 +1,8 @@
+2001-07-24  Chema Celorio  <chema@celorio.com>
+
+	* capplet-dir-view.c (capplet_dir_view_load_dir): set the title
+	of the window to "Gnome Control Center : foo"
+
 2001-07-24  Bradford Hovinen  <hovinen@ximian.com>
 
 	* capplet-dir.c (capplet_control_launch): Set moniker property
